2004-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/elf/elf.exp: Add group0a, group0b and group1 for section
	group.

	* gas/elf/group0.s: New file.
	* gas/elf/group0a.d: Likewise.
	* gas/elf/group0b.d: Likewise.
	* gas/elf/group1.e: Likewise.
	* gas/elf/group1.s: Likewise.

2004-04-23  Nick Clifton  <nickc@redhat.com>

	* gas/symver/symver1.d: Cope with extra symbols inserted by
	arm-elf toolchains.
	* gas/symver/symver0.d: Likewise
	* gas/elf/symver.d: Likewise.

2004-04-22  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/pcrel2.d: Update.
	* gas/sh/tlsd.d: Update.
	* gas/sh/tlsnopic.d: Update.
	* gas/sh/tlspic.d: Update.

2004-04-22  Mark Kettenis  <kettenis@gnu.org>

	* lib/gas-defs.exp (is_elf_format): Add OpenBSD support.

2004-04-22  Atsushi Nemoto  <anemo@mba.ocn.ne.jp>

	* gas/mips/lb-xgot-ilocks.d: Remove nops in load delay slot.
	* gas/mips/mips-abi32-pic.d: Likewise.
	* gas/mips/mips-abi32-pic2.d: Likewise.
	* gas/mips/mips-gp32-fp32-pic.d: Likewise.
	* gas/mips/mips-gp32-fp64-pic.d: Likewise.
	* gas/mips/mips-gp64-fp32-pic.d: Likewise.
	* gas/mips/mips-gp64-fp64-pic.d: Likewise.
	* gas/mips/relax-swap1-mips2.d: Likewise.
	* gas/mips/lb-svr4pic-ilocks.d: New test.
	* gas/mips/mips.exp: Run it.

2004-04-22  Paul Brook  <paul@codesourcery.com>

	* maverick.c (off8s): Test full shifted operand range.
	(MCC2): Define.
	(MVDSPACC, MVACCDSP): Use it.
	* maverick.d, maverick.s: Regenerate.

2004-04-22  Peter Barada <peter@the-baradas.com>

	* gas/m68k/mcf-mac.s: New test: Check ColdFire MAC instructions.
	* gas/m68k/mcf-emac.s: New test: Similar checks.
	* gas/m68k/mcf-mac.d: New test: Expected output.
	* gas/m68k/mcf-emac.d: New test: Likewise.
	* gas/m68k/all.exp: Run new tests.

2004-04-21  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/elempic.d: File removed as part of -membedded-pic removal.
	* gas/mips/empic.d: Likewise.
	* gas/mips/empic.l: Likewise.
	* gas/mips/empic.s: Likewise.
	* gas/mips/empic2.d: Likewise.
	* gas/mips/empic2.s: Likewise.