@@ -1,3 +1,7 @@
+2004-04-29  Ben Elliston  <bje@au.ibm.com>
+
+	* ppc-opc.c (powerpc_opcodes): Add "dbczl" instruction for PPC970.
+
 2004-04-22  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* sh-dis.c (print_insn_sh): Print the value in constant pool
