@@ -1,3 +1,8 @@
+2004-04-30  Ben Elliston  <bje@au.ibm.com>
+
+	* gas/ppc/power4.s: Add dcbz and dcbzl test cases.
+	* gas/ppc/power4.d: Update accordingly.
+
 2004-04-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/elf/elf.exp: Add group0a, group0b and group1 for section
